fix: overflow layout on mobile view

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,11 @@
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 .showme:hover + #hideme {
   visibility: visible;
 }
